components/apps/mafl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mafl
  namespace: mafl
spec:
  ports:
  - name: mafl
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: mafl
  type: ClusterIP
