components/apps/mafl/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mafl
  namespace: mafl
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`mafl.redcomet.ca`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: mafl
      port: 3000
